# py3mt5linux

./: LICENSE.txt  README.md  pyproject.toml  setup.py
pymt5linux/: __init__.py  __main__.py
