[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymt5linux"
version = "1.0"
authors = [
    { name = "Morteza omidi", email = "Mortezaomidi24@yahoo.com" },
]
description = "MetaTrader5 for Linux"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rpyc"
]

[project.urls]
"Homepage" = "https://github.com/tradeset/py3mt5linux"